Fixed overlapping content

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,7 +24,8 @@
 	--max-padding: 10px;
 	--section-padding: 16px;
 
-	--body-margin: clamp(0px, 10%, 25%);
+	--content-margin: clamp(0px, 10%, 25%);
+	--content-padding: 10%;
 
 	--card-width: clamp(80%, 30px, 30px);
 	--propic-size: 68px;
@@ -46,8 +47,14 @@
 	--section-corner-radius: 6px;
 	--circle: 50%;
 	--section-box-shadow: 0px 3px 6px;
+	--border-bottom: 1px solid var(--border-muted);
 
 	--animation: 250ms ease;
+}
+@media only screen and (max-width: 800px) {
+	:root {
+		--content-padding: 20%;
+	}
 }
 @media (prefers-reduced-motion) {
 	:root {
@@ -63,23 +70,28 @@
 	transition: var(--animation);
 }
 
-html {
+html, body {
 	margin: var(--document-padding);
 	padding: var(--document-padding);
-
+	
 	height: 100vh;
 }
 
 body {
 	margin-top: var(--document-padding);
 	margin-bottom: var(--document-padding);
-	margin-left: var(--body-margin);
-	margin-right: var(--body-margin);
 
 	height: 100%;
 
 	background: var(--background);
 	box-shadow: var(--section-shadow);
+}
+
+body > div.content {
+	margin-left: var(--content-margin);
+	margin-right: var(--content-margin);
+
+	padding-bottom: var(--content-padding);
 }
 
 header, footer {
@@ -95,11 +107,12 @@ footer, aside {
 }
 
 footer {
-	position: absolute;
-	left: 0;
+	position: fixed;
 	bottom: 0;
 
-	width: calc(100vw - var(--max-padding) * 2);
+	margin-top: var(--standard-padding);
+
+	width: 100%;
 
 	text-align: center;
 }
